reduced noise from goaccess report

--- a/goaccess-data/data/goaccess.conf
+++ b/goaccess-data/data/goaccess.conf
@@ -260,7 +260,7 @@ daemonize false
 # Ensure clients send the specified origin header upon the WebSocket
 # handshake.
 #
-#origin http://example.org
+origin https://stats.ammobin.ca
 
 # The port to which the connection is being attempted to connect.
 # By default GoAccess' WebSocket server listens on port 7890
@@ -463,7 +463,7 @@ ignore-panel NOT_FOUND
 #ignore-panel BROWSERS
 #ignore-panel VISIT_TIMES
 #ignore-panel VIRTUAL_HOSTS
-#ignore-panel REFERRERS
+ignore-panel REFERRERS
 #ignore-panel REFERRING_SITES
 ignore-panel KEYPHRASES
 #ignore-panel STATUS_CODES
@@ -475,7 +475,7 @@ ignore-panel KEYPHRASES
 # '*' matches 0 or more characters (including spaces)
 # '?' matches exactly one character
 #
-#ignore-referer *.domain.com
+ignore-referer ammobin.ca
 #ignore-referer ww?.domain.*
 
 # Ignore parsing and displaying one or multiple status code(s)
