--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,13 @@ services:
     restart: always
     ports:
       - 3000
+  influx:
+    image: influx:1.3-alpine
+    restart: always
+    volumes:
+      - ./influx-data/:/var/lib/influxdb      
+    ports:
+      - 8086    
   api:
     env_file: .env 
     image: ammobindotca/ammobin-api:latest
@@ -30,6 +37,7 @@ services:
       - 8080
     links:
       - redis
+      - influx
   redis:
     image: redis:3.0-alpine
     restart: always
