--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - ./Caddyfile:/etc/Caddyfile
       - ./caddy-logs:/var/log/caddy
       - ./goaccess-data/report/:/www/goaccess
+      - ./caddy-srv/:/srv
     ports:
       - 80:80
       - 443:443
