--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.2'
+version: '3'
 services:
   caddy:
     image: abiosoft/caddy:latest
@@ -22,9 +22,10 @@ services:
   client:
     image: ammobindotca/ammobin-client:latest
     restart: always
-    init: true
-    mem_limit: 500MB
-    memswap_limit: 1G
+    deploy:
+      resources:
+        limits:
+          memory: 450M
     depends_on:
       - api
   influx:
@@ -36,10 +37,10 @@ services:
     env_file: .env
     image: ammobindotca/ammobin-api:latest
     restart: always
-    init: true
-    mem_reservation: 150MB
-    mem_limit: 500MB
-    memswap_limit: 1GB
+    deploy:
+      resources:
+        limits:
+          memory: 500M
     links:
       - redis
       - influx
@@ -50,7 +51,6 @@ services:
     env_file: .env
     image: ammobindotca/ammobin-worker
     restart: always
-    init: true
     links:
       - redis
       - influx
@@ -62,16 +62,27 @@ services:
     image: redis:3.0-alpine
     restart: always
     command: redis-server /usr/local/etc/redis/redis.conf
-    mem_limit: 200MB
+    deploy:
+      resources:
+        limits:
+          memory: 200M
     volumes:
       - ./redis-data:/data
       - ./redis.conf:/usr/local/etc/redis/redis.conf
   images:
     image: willnorris/imageproxy:latest
     restart: always
+    deploy:
+      resources:
+        limits:
+          memory: 150M
     entrypoint:  /go/bin/imageproxy -cache /tmp/imageproxy  -addr 0.0.0.0:8080  -referrers ammobin.ca
   goaccess:
     image: allinurl/goaccess
+    deploy:
+      resources:
+        limits:
+          memory: 75M
     volumes:
       - ./goaccess-data/data:/srv/data
       - ./goaccess-data/report:/srv/report
@@ -80,5 +91,9 @@ services:
     image: grafana/grafana
     env_file: .env
     restart: always
+    deploy:
+      resources:
+        limits:
+          memory: 150M
     volumes:
       - ./graphana:/var/lib/grafana
