--- a/Caddyfile
+++ b/Caddyfile
@@ -5,9 +5,20 @@ ammobin.ca {
   proxy / client:3000 {
     transparent
   }
-  header / Strict-Transport-Security "max-age=31536000;"
+  
+  header / {
+    # Enable HTTP Strict Transport Security (HSTS) to force clients to always connect via HTTPS
+    Strict-Transport-Security "max-age=31536000;"
+    # Enable cross-site filter (XSS) and tell browser to block detected attacks
+    X-XSS-Protection "1; mode=block"
+    # Prevent some browsers from MIME-sniffing a response away from the declared Content-Type
+    X-Content-Type-Options "nosniff"
+    # Disallow the site to be rendered within a frame (clickjacking protection)
+    X-Frame-Options "DENY"
+  }
+  
   log / /var/log/caddy/client.log "{combined}" {
-    rotate_size 50
+    rotate_size 15
   }
 
   errors {
@@ -22,8 +33,19 @@ api.ammobin.ca {
   proxy / api:8080 {
     transparent
   }
-  header / Strict-Transport-Security "max-age=31536000;"
-  log / /var/log/caddy/api.log "{combined}"
+  header / {
+    # Enable HTTP Strict Transport Security (HSTS) to force clients to always connect via HTTPS
+    Strict-Transport-Security "max-age=31536000;"
+    # Enable cross-site filter (XSS) and tell browser to block detected attacks
+    X-XSS-Protection "1; mode=block"
+    # Prevent some browsers from MIME-sniffing a response away from the declared Content-Type
+    X-Content-Type-Options "nosniff"
+    # Disallow the site to be rendered within a frame (clickjacking protection)
+    X-Frame-Options "DENY"
+  }
+  log / /var/log/caddy/api.log "{combined}" {
+    rotate_size 15
+  }
 }
 
 images.ammobin.ca {
@@ -31,7 +53,16 @@ images.ammobin.ca {
   proxy / images:8080 {
     transparent
   }
-  header / Strict-Transport-Security "max-age=31536000;"
+  header / {
+    # Enable HTTP Strict Transport Security (HSTS) to force clients to always connect via HTTPS
+    Strict-Transport-Security "max-age=31536000;"
+    # Enable cross-site filter (XSS) and tell browser to block detected attacks
+    X-XSS-Protection "1; mode=block"
+    # Prevent some browsers from MIME-sniffing a response away from the declared Content-Type
+    X-Content-Type-Options "nosniff"
+    # Disallow the site to be rendered within a frame (clickjacking protection)
+    X-Frame-Options "DENY"
+  }
 }
 
 stats.ammobin.ca {
