--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,11 @@ services:
       - ./caddy-logs:/var/log/caddy
       - ./goaccess-data/report/:/www/goaccess
       - ./caddy-srv/:/srv
+    deploy:
+      mode: global
+      placement:
+        constraints:
+          - node.role == manager
     ports:
       - 80:80
       - 443:443
@@ -33,6 +38,11 @@ services:
     restart: always
     volumes:
       - ./influx-data/:/var/lib/influxdb
+    deploy:
+      mode: global
+      placement:
+        constraints:
+          - node.role == manager
   api:
     env_file: .env
     image: ammobindotca/ammobin-api:latest
@@ -58,6 +68,10 @@ services:
       - redis
       - influx
       - api
+    deploy:
+      placement:
+        constraints:
+          - node.role == worker
   redis:
     image: redis:3.0-alpine
     restart: always
@@ -66,6 +80,10 @@ services:
       resources:
         limits:
           memory: 200M
+      mode: global
+      placement:
+        constraints:
+          - node.role == manager
     volumes:
       - ./redis-data:/data
       - ./redis.conf:/usr/local/etc/redis/redis.conf
@@ -95,5 +113,8 @@ services:
       resources:
         limits:
           memory: 150M
+      placement:
+        constraints:
+          - node.role == worker
     volumes:
       - ./graphana:/var/lib/grafana
