--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       resources:
         limits:
           memory: 450M
+      replicas: 2
     depends_on:
       - api
   influx:
@@ -78,10 +79,14 @@ services:
       - redis
       - influx
       - api
-#    deploy:
- #     placement:
-  #      constraints:
-   #       - node.role == worker
+    deploy:
+      resources:
+        limits:
+          memory: 450M
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == worker
   redis:
     image: redis:3.0-alpine
     restart: always
@@ -108,6 +113,7 @@ services:
       resources:
         limits:
           memory: 150M
+      replicas: 2
     entrypoint:  /go/bin/imageproxy -cache /tmp/imageproxy  -addr 0.0.0.0:8080  -referrers ammobin.ca
 #  goaccess:
 #    image: allinurl/goaccess
