--- a/Caddyfile
+++ b/Caddyfile
@@ -2,7 +2,7 @@ ammobin.ca {
   tls {%EMAIL%}
   gzip
   push
-  proxy / client:3000 https://ammobin.now.sh https://ammobin-client.herokuapp.com {
+  proxy / client:3000 https://ammobin.now.sh https://ammobin-client.herokuapp.com https://ammobin.netlify.com/{
     policy first
     fail_timeout 1s
     max_fails 5
