--- a/goaccess/data/goaccess.conf
+++ b/goaccess/data/goaccess.conf
@@ -145,7 +145,7 @@ hl-header true
 # It allows the ability to customize each panel plot. See example below.
 #
 #html-prefs
-{"theme":"bright","perPage":5,"layout":"horizontal","showTables":true,"visitors":{"plot":{"chartType":"bar"}}}
+#{"theme":"bright","perPage":5,"layout":"horizontal","showTables":true,"visitors":{"plot":{"chartType":"bar"}}}
 
 # Set HTML report page title and header.
 #
@@ -260,7 +260,7 @@ addr 0.0.0.0
 
 # Run GoAccess as daemon (if --real-time-html enabled).
 #
-#daemonize false
+#daemonize true
 
 # Ensure clients send the specified origin header upon the WebSocket
 # handshake.
@@ -279,7 +279,7 @@ origin https://stats.ammobin.ca
 
 # Enable real-time HTML output.
 #
-real-time-html true
+#real-time-html true
 
 # Path to TLS/SSL certificate.
 # Note that ssl-cert and ssl-key need to be used to enable TLS/SSL.
@@ -487,9 +487,9 @@ crawlers-only false
 #ignore-panel BROWSERS
 #ignore-panel VISIT_TIMES
 #ignore-panel VIRTUAL_HOSTS
-ignore-panel REFERRERS
+#ignore-panel REFERRERS
 #ignore-panel REFERRING_SITES
-ignore-panel KEYPHRASES
+#ignore-panel KEYPHRASES
 #ignore-panel STATUS_CODES
 #ignore-panel REMOTE_USER
 #ignore-panel GEO_LOCATION
