ignore-crawlers = true

--- a/goaccess/data/goaccess.conf
+++ b/goaccess/data/goaccess.conf
@@ -461,7 +461,7 @@ double-decode false
 # Note that it will count them towards the total
 # number of requests, but excluded from any of the panels.
 #
-ignore-crawlers false
+ignore-crawlers true
 
 # Parse and display crawlers only.
 # This will ignore robots listed under browsers.c
