--- a/goaccess/data/goaccess.conf
+++ b/goaccess/data/goaccess.conf
@@ -361,6 +361,7 @@ with-output-resolver false
 # Ranges can be included as well using a dash in between
 # the IPs (start-end).
 #
+exclude-ip 172.16.0.0-172.31.255.255 #docker ips 
 #exclude-ip 127.0.0.1
 #exclude-ip 192.168.0.1-192.168.0.100
 #exclude-ip ::1
@@ -430,21 +431,21 @@ double-decode false
 
 # Enable parsing/displaying the given panel.
 #
-#enable-panel VISITORS
-#enable-panel REQUESTS
-#enable-panel REQUESTS_STATIC
-#enable-panel NOT_FOUND
-#enable-panel HOSTS
-#enable-panel OS
-#enable-panel BROWSERS
-#enable-panel VISIT_TIMES
-#enable-panel VIRTUAL_HOSTS
-#enable-panel REFERRERS
-#enable-panel REFERRING_SITES
-#enable-panel KEYPHRASES
-#enable-panel STATUS_CODES
-#enable-panel REMOTE_USER
-#enable-panel GEO_LOCATION
+enable-panel VISITORS
+enable-panel REQUESTS
+enable-panel REQUESTS_STATIC
+enable-panel NOT_FOUND
+enable-panel HOSTS
+enable-panel OS
+enable-panel BROWSERS
+enable-panel VISIT_TIMES
+enable-panel VIRTUAL_HOSTS
+enable-panel REFERRERS
+enable-panel REFERRING_SITES
+enable-panel KEYPHRASES
+enable-panel STATUS_CODES
+enable-panel REMOTE_USER
+enable-panel GEO_LOCATION
 
 # Hide a referer but still count it. Wild cards are allowed. i.e., *.bing.com
 #
@@ -597,6 +598,7 @@ static-file .tiff
 static-file .tif
 static-file .ttf
 static-file .flv
+static-file .json
 #static-file .less
 #static-file .ac3
 #static-file .avi
