hide self referrers

--- a/goaccess/data/goaccess.conf
+++ b/goaccess/data/goaccess.conf
@@ -449,9 +449,9 @@ enable-panel GEO_LOCATION
 
 # Hide a referer but still count it. Wild cards are allowed. i.e., *.bing.com
 #
-#hide-referer *.google.com
-#hide-referer bing.com
-
+hide-referer *.ammobin.ca
+hide-referer ammobin.ca
+hide-referer -
 # Hour specificity. Possible values: `hr` (default), or `min` (tenth
 # of a minute).
 #
