added my rendertron image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,3 +100,5 @@ services:
       - ./goaccess/html:/srv/report
       - ./caddy-logs:/srv/logs
     entrypoint: goaccess --no-global-config --config-file=/srv/data/goaccess.conf --ws-url=wss://stats.ammobin.ca --output=/srv/report/index.html --log-file=/srv/logs/ammobin.log --real-time-html
+   rendertron:
+     image: ammobindotca/rendertron
