updated fluent config to send messages off to elastic search

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -4,5 +4,14 @@
 </source>
 
 <match ammobin.**>
-  @type stdout
+  @type elasticsearch
+  host #{ENV["ES_URL"]}
+  port 443 
+  user #{ENV["ES_USER"]}
+  password #{ENV["ES_PASSWORD"]}
+  scheme https
+  ssl_version TLSv1_2 
+  include_timestamp true
+  logstash_format true
+  logstash_prefix ammobin
 </match>
