fixed incorrect fluentd env config

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -5,10 +5,10 @@
 
 <match ammobin.**>
   @type elasticsearch
-  host #{ENV["ES_URL"]}
+  host #{ENV['ES_URL']}
   port 443 
-  user #{ENV["ES_USER"]}
-  password #{ENV["ES_PASSWORD"]}
+  user #{ENV['ES_USER']}
+  password #{ENV['ES_PASSWORD']}
   scheme https
   ssl_version TLSv1_2 
   include_timestamp true
