--- a/fluentd.conf
+++ b/fluentd.conf
@@ -1,6 +1,17 @@
+
 <source>
   @type forward
   port 24224 
+</source>
+
+<source>
+ @type tail
+ path /var/log/ammobin.log
+ pos_file /var/log/td-agent/httpd-access.log.pos
+ tag ammobin.caddylog
+ <parse>
+   @type nginx
+ </parse>
 </source>
 
 <match ammobin.**>
