add fluentd buffer + named shared docker volumes

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -25,4 +25,8 @@
   include_timestamp true
   logstash_format true
   logstash_prefix ammobin
+  <buffer>
+    @type file
+    path /var/log/fluent/buffer
+  </buffer>
 </match>
