--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
     volumes:
       - ./.caddy:/root/.caddy
       - ./Caddyfile:/etc/Caddyfile
-      - ./caddy-logs:/var/log/caddy
-      - ./goaccess/html:/www/goaccess
-      - ./caddy-srv/:/srv
+      - caddy-logs:/var/log/caddy
+      - goaccess-html:/www/goaccess
+      - caddy-srv/:/srv
     ports:
       - 80:80
       - 443:443
@@ -93,9 +93,9 @@ services:
     networks:
         - front
     volumes:
-      - ./goaccess/data:/srv/data
-      - ./goaccess/html:/srv/report
-      - ./caddy-logs:/srv/logs
+      - goaccess-data:/srv/data
+      - goaccess-html:/srv/report
+      - caddy-logs:/srv/logs
     entrypoint: goaccess --no-global-config --config-file=/srv/data/goaccess.conf --ws-url=wss://stats.ammobin.ca --output=/srv/report/index.html --log-file=/srv/logs/ammobin.log --real-time-html
   rendertron:
     image: ammobindotca/rendertron
@@ -110,10 +110,17 @@ services:
         - back
     volumes:
       - ./fluentd.conf:/fluentd/etc/fluentd.conf
-      - ./caddy-logs:/var/log
+      - caddy-logs:/var/log
+      - fluent-buffer:/var/log/fluent/buffer
     environment:
       - FLUENTD_CONF=fluentd.conf
 
 networks:
     back:
     front:
+volumes:
+    fluent-buffer:
+    caddy-logs:
+    goaccess-data:
+    goaccess-html:
+    caddy-srv:
