--- a/fluentd.conf
+++ b/fluentd.conf
@@ -7,7 +7,7 @@
 <source>
  @type tail
  path /var/log/ammobin.log
- pos_file /var/log/fluent/buffer/ammobin.log.pos
+ pos_file /fluentd/log/ammobin.log.pos
  tag ammobin.caddylog
  <parse>
    @type nginx
@@ -27,6 +27,6 @@
   logstash_prefix ammobin
   <buffer>
     @type file
-    path /var/log/fluent/buffer
+    path /fluentd/log/buffer
   </buffer>
 </match>
