try indicies by tag

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -2,13 +2,14 @@
 <source>
   @type forward
   port 24224 
+  tag tcp 
 </source>
 
 <source>
  @type tail
  path /var/log/ammobin.log
  pos_file /fluentd/log/ammobin.log.pos
- tag ammobin.caddylog
+ tag caddylog
  <parse>
    @type nginx
  </parse>
@@ -24,7 +25,7 @@
   ssl_version TLSv1_2 
   include_timestamp true
   logstash_format true
-  logstash_prefix ammobin
+  logstash_prefix ammobin-${tag}
   <buffer>
     @type file
     path /fluentd/log/buffer
