try indicies by tag AGAIN

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -2,14 +2,13 @@
 <source>
   @type forward
   port 24224 
-  tag tcp 
 </source>
 
 <source>
  @type tail
  path /var/log/ammobin.log
  pos_file /fluentd/log/ammobin.log.pos
- tag caddylog
+ tag ammobin-caddylog
  <parse>
    @type nginx
  </parse>
