try indicies by tag AGAIN AGAIN

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -8,7 +8,7 @@
  @type tail
  path /var/log/ammobin.log
  pos_file /fluentd/log/ammobin.log.pos
- tag ammobin-caddylog
+ tag ammobin.caddylog
  <parse>
    @type nginx
  </parse>
